# email-agent

./: .gitignore  .markdownlint.json  .ruffignore  README.md  app.config.json  openapi_3_1.json  pyproject.toml  roadmap.md  ruleset_default.json  taxonomy_default.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
data/: contacts.json  ruleset_v2.json  taxonomy_v2.json
data/decisions/: 2024-12-17.ndjson  2025-08-27.ndjson
docs/: AI_TASK_ORCHESTRATOR_GUIDE.md  CONTRIBUTING.md  ai_task_orchestrator.py  api_schema_fixes_report.md  branch-protection-checklist.md  branch-ruleset-config.json  dev-branch-ruleset-config.json  development-faq.md  email-agent_phased_roadmap.md  json_enhancement_summary.md  roadmap.md
email-assistant-repo/: .env.example  README.md  pyproject.toml
email-assistant-repo/data/: ruleset_v2.json  taxonomy_v2.json
email-assistant-repo/scripts/: run_api.py  train_classifier.py
email-assistant-repo/src/email_assistant/: stores.py
email-assistant-repo/src/email_assistant/api/: main.py
email-assistant-repo/src/email_assistant/ml/: vectorizer.py
schemas/: config.schema.json  contacts.schema.json  decision.schema.json  ruleset.schema.json  taxonomy.schema.json
scripts/: check_linting.py  developer_tools.py  run_api.py  setup_branch_protection.sh  setup_pre_commit.py  test_api.py  test_review_tracking.py  train_classifier.py
src/email_assistant/: __init__.py  attachment_manager.py  config.py  rules_engine.py  scheduler.py  stores.py
src/email_assistant/api/: main.py  models.py
src/email_assistant/ml/: classifier.py  pipeline.py  vectorizer.py
tests/: test_api_smoke.py  test_vectorizer.py
