[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-assistant"
version = "0.1.0"
description = "Desktop Email Assistant — local API + JSON stores + embedded graph + classifier"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name="You", email="you@example.com"}]
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "pandas>=2.2",
  "torch>=2.2",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "pyoxigraph>=0.3.19",
  "ujson>=5.9",
  "httpx>=0.27",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "anyio>=4.4",
  "requests>=2.32",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","W","B"]
ignore = []
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
